k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  labels:
    app: app-satc
spec:
  type: ClusterIP
  selector:
    app: app-satc
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
